welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: not found: value green
while(getCouleurSol()!=green) {
                       ^